--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
 .bundle
 db/*.sqlite3
+db/schema.rb
 log/*.log
 tmp/
 .sass-cache/
 nbproject/
+
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
+
