--- a/config/database.yml
+++ b/config/database.yml
@@ -18,11 +18,12 @@ test:
   pool: 5
   timeout: 5000
 
-production: 
-  encoding: unicode
-  adapter: postgresql
-  username: username
-  port: 5432
-  host: hostname
-  database: database
-  password: password
+production:
+  adapter: mysql2
+  encoding: utf8
+  reconnect: false
+  database: simpledns_production
+  pool: 5
+  username: root
+  password: root
+  host: localhost
