--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ log/*.log
 tmp/
 .sass-cache/
 nbproject/
-
+config/database.yml
 config/settings.local.yml
 config/settings/*.local.yml
 config/environments/*.local.yml
