--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,1 +1,8 @@
 master: 1.1.1.1
+default_ttl: 2000
+min_ttl: 1000
+ns:
+  - ns1.ourdomain.com
+  - ns2.ourdomain.com
+  - ns3.ourdomain.com
+  - ns4.ourdomain.com
