--- a/config/database.yml.sample
+++ b/config/database.yml.sample
@@ -22,7 +22,7 @@ production:
   adapter: mysql2
   encoding: utf8
   reconnect: false
-  database: simpledns_production
+  database: entrydns_production
   pool: 5
   username: root
   password: root
