--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,5 @@ config/database.yml
 config/settings.local.yml
 config/settings/*.local.yml
 config/environments/*.local.yml
+config/settings.yml
 public/assets
