--- a/config/settings.sample.yml
+++ b/config/settings.sample.yml
@@ -18,3 +18,6 @@ support_mail: "support@entrydns.net"
 honeypot: userid
 max_domains_per_user: 200
 max_records_per_domain: 500
+resolv:
+  - 8.8.8.8
+  - 8.8.4.4
