--- a/config/settings.sample.yml
+++ b/config/settings.sample.yml
@@ -3,7 +3,7 @@ min_ttl: 60
 ns:
   - ns1.entrydns.net
   - ns2.entrydns.net
-#  - ns3.entrydns.net
+  - ns3.entrydns.net
 #  - ns4.entrydns.net
 default_prio: 10
 host_domains:
