--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,8 @@ config/settings/*.local.yml
 config/environments/*.local.yml
 config/settings.yml
 public/assets
-/spec/.views/
-/spec/.requests/
-/spec/.controllers/
-/spec/.helpers/
+spec/.views/
+spec/.requests/
+spec/.controllers/
+spec/.helpers/
+coverage
