--- a/config/database.mysql.sample.yml
+++ b/config/database.mysql.sample.yml
@@ -4,8 +4,8 @@ development:
   reconnect: false
   database: entrydns_development
   pool: 5
-  username: root
-  password: root
+  username: entrydns
+  password: entrydns
   host: localhost
 
 # Warning: The database defined as "test" will be erased and
@@ -17,8 +17,8 @@ test:
   reconnect: false
   database: entrydns_test
   pool: 5
-  username: root
-  password: root
+  username: entrydns
+  password: entrydns
   host: localhost
 
 production:
@@ -27,6 +27,6 @@ production:
   reconnect: false
   database: entrydns_production
   pool: 5
-  username: root
-  password: root
+  username: entrydns
+  password: entrydns
   host: localhost
